# mt-scan

./: .gitignore  CMakeLists.txt  README  requirements.txt
.devcontainer/: devcontainer.json
data/: blobs_grid_100.pkl
data/dataset-synthetic-1/: 2d-10c.csv  2d-4c-no4.csv  2dnormals.csv  2sp2glob.csv  DS-577.csv  banana.csv  birch-rg1.csv  birch-rg2.csv  blobs.csv  circle.csv  cluto-t4-8k.csv  complex8.csv  cuboids.csv  curves2.csv  dense-disk-3000.csv  dense-disk-5000.csv  diamond9.csv  disk-1000n.csv  disk-3000n.csv  disk-4600n.csv  donut3.csv  dpc.csv  ds4c2sc8.csv  elliptical_10_2.csv  engytime.csv  hepta.csv  insect.csv  long3.csv  lsun.csv  mopsi-finland.csv  mopsi-joensuu.csv  pathbased.csv  rings.csv  s-set2.csv  s-set3.csv  s-set4.csv  simplex.csv  sizes4.csv  sizes5.csv  smile2.csv  (+10 more)
data/sample/results/exp_001/: experiment.json
data/sample/results/exp_time/: experiment.json
data/synthetic-1/: 2d-20c-no0.csv  2d-4c-no9.csv  2d-4c.csv  D31.csv  DS-850.csv  R15.csv  aggregation.csv  atom.csv  birch-rg3.csv  chainlink.csv  cluto-t4-8k.csv  cluto-t5-8k.csv  cluto-t7-10k.csv  cluto-t8-8k.csv  complex9.csv  cure-t0-2000n-2D.csv  cure-t1-2000n-2D.csv  cure-t2-4k.csv  dartboard2.csv  disk-4000n.csv  disk-4500n.csv  disk-5000n.csv  disk-6000n.csv  donut1.csv  donutcurves.csv  dpb.csv  dpc.csv  ds2c2sc13.csv  ds3c3sc6.csv  elly-2d10c13s.csv  flame.csv  gaussians1.csv  golfball.csv  hypercube.csv  impossible.csv  jain.csv  long1.csv  long2.csv  longsquare.csv  pmf.csv  (+23 more)
docker/: Dockerfile  Dockerfile.base
include/: merge_tree_scan.hpp  resample.cuh  resample.hpp  utils.hpp
python/: convergence_analysis.py  gen_blobs.py  gen_latex_table.py  plot_time_exp.py  run_exp.py  run_exp_cross.py  run_exp_time.py  run_mtscan.py  script.sh  test.py
src/: main.cpp  merge_tree_scan.cpp  python-module.cpp  resample.cpp  resample.cu  utils.cpp
(+15 files in other folders)
